# terminal-char-rain-matrix

./: Cargo.toml  README.md
src/: lib.rs  main.rs
